--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,6 @@ cffi==1.15.1
 charset-normalizer==3.2.0
 colorama==0.4.6
 cryptography==41.0.3
-faiss-cpu==1.7.4
 frozenlist==1.4.0
 idna==3.4
 multidict==6.0.4
@@ -24,3 +23,25 @@ tiktoken==0.4.0
 tqdm==4.65.0
 urllib3==2.0.4
 yarl==1.9.2
+
+pip~=23.1.2
+telegram~=0.0.1
+PyYAML~=6.0
+numpy~=1.25.2
+setuptools~=65.5.0
+pytz~=2023.3
+mypy~=1.2.0
+pydantic~=1.10.7
+tenacity~=8.2.2
+gunicorn~=20.1.0
+numexpr~=2.8.4
+greenlet~=2.0.2
+langchain~=0.0.250
+langsmith~=0.0.18
+packaging~=23.1
+SQLAlchemy~=2.0.12
+psycopg2~=2.9.6
+marshmallow~=3.20.1
+platformdirs~=3.2.0
+aiogram~=2.25.1
+python-dotenv~=1.0.0
